apps/monitoring/guacamole/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-ingress # Changed
  # namespace: monitoring # Will be set by kustomization
spec:
  ingressClassName: tailscale # Added
  tls: # Added
    - hosts:
        - guacamole # Changed
  rules:
    - host: guacamole # Changed
      http:
        paths:
          - path: / # Changed
            pathType: Prefix # Changed
            backend:
              service:
                name: service # Changed, Kustomize will prefix to guacamole-service
                port:
                  name: http # Changed
